cluster/talos/apps/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
